# snowsune.dev

./: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
rs/: Cargo.toml  build.sh
rs/src/: lib.rs  ndtools.rs  utils.rs
src/lib/components/: AnimatedScene.svelte  PageDirectory.svelte
src/lib/foxyui/attachments/: click-outside.ts  draggable.ts  focus-trap.ts  hotkeys.ts  index.ts  resize.ts
src/lib/foxyui/components/: index.ts
src/lib/foxyui/components/buttons/: Button.svelte
src/lib/foxyui/components/inputs/: ComboBox.svelte  DatePicker.svelte  Form.svelte  InputFrame.svelte  NumberInput.svelte  SegmentedRadio.svelte  SegmentedRatio.svelte  Slider.svelte
src/lib/foxyui/components/overlays/: Floater.svelte  ModalManager.svelte  Tooltip.svelte
src/lib/foxyui/hooks/: index.ts  localStorageSynced.svelte.ts  use-click-outside.ts  use-explicit-effect.svelte.ts  use-focus-trap.ts
src/lib/foxyui/utils/: index.ts
src/lib/scripts/: hyperobject.ts  polytope.ts
src/lib/scripts/polygen/: coset-table.ts  index.ts  mmath.ts  number.ts  parser.ts  polygen.ts  vmath.ts
src/lib/utils/: animation.ts  animationloop.ts  index.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/4d/: +page.svelte  PlaneControl.svelte
src/routes/dev/ui/: +layout.svelte  +page.svelte
src/routes/dev/ui/buttons/: +page.svelte
src/routes/dev/ui/buttons/button/: +page.svelte
src/routes/dev/ui/inputs/: +page.svelte
src/routes/dev/ui/overlays/: +page.svelte
src/routes/tests/: +page.svelte
(+4 files in other folders)
